--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "bun-sample",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun --watch ./src/index.ts"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
